added testing from docker container